<resources>
    <string name="app_name">Pubber</string>
    <string name="nazwa_aplikacji">Pubber</string>
    <string-array name="rangeRating">
        <item>0</item>
        <item>10</item>
    </string-array>
    <string name="general_group">POWIADOMIENIA</string>
    <string name="notifications_from_app">Od Pubbera</string>
    <string name="notifications_rating">Twoje opinie</string>
    <string name="notification_from_app_remind_title">Wychodzisz dzisiaj ?</string>
    <string name="notification_from_app_remind_description">Znajdź Pub, który idealnie do ciebie pasuje !</string>
    <string name="hello_blank_fragment">Hi There</string>
    <string-array name="all_breweries">
        <item>AleBrowar</item>
        <item>Amber</item>
        <item>Artezan</item>
        <item>Brokreacja</item>
        <item>Budweiser</item>
        <item>Cieszyn</item>
        <item>Fortuna</item>
        <item>Funky Fluids</item>
        <item>Grimbergen</item>
        <item>Grodzisk</item>
        <item>Grolsch</item>
        <item>Harnaś</item>
        <item>Kasztelan</item>
        <item>Kingpin</item>
        <item>Komes</item>
        <item>Komoran</item>
        <item>Kozel</item>
        <item>Książęce</item>
        <item>Lech</item>
        <item>Łomża</item>
        <item>Miłosław</item>
        <item>Moczybroda</item>
        <item>Na Jurze</item>
        <item>Namysłów</item>
        <item>Nepomucen</item>
        <item>Okocim</item>
        <item>Paulaner</item>
        <item>Perła</item>
        <item>Pilsner Urquell</item>
        <item>Pinta</item>
        <item>Primator</item>
        <item>Racibórz</item>
        <item>Raduga</item>
        <item>Recraft</item>
        <item>Somersby</item>
        <item>Staropramen</item>
        <item>Trzech Kumpli</item>
        <item>Tyskie</item>
        <item>Witnica</item>
        <item>Wrężel</item>
        <item>Za Miastem</item>
        <item>Zatecky</item>
        <item>Żubr</item>
        <item>Żywiec</item>
    </string-array>
    <string-array name="first_to_show_breweries">
        <item>Budweiser</item>
        <item>Grodzisk</item>
        <item>Grolsch</item>
        <item>Kozel</item>
        <item>Paulaner</item>
        <item>Pilsner Urquell</item>
        <item>Pinta</item>
        <item>Trzech Kumpli</item>
        <item>Żywiec</item>
    </string-array>
    <string-array name="second_to_show_breweries">
        <item>AleBrowar</item>
        <item>Amber</item>
        <item>Artezan</item>
        <item>Brokreacja</item>
        <item>Cieszyn</item>
        <item>Fortuna</item>
        <item>Funky Fluids</item>
        <item>Grimbergen</item>
        <item>Harnaś</item>
        <item>Kasztelan</item>
        <item>Kingpin</item>
        <item>Komes</item>
        <item>Komoran</item>
        <item>Książęce</item>
        <item>Lech</item>
        <item>Łomża</item>
        <item>Miłosław</item>
        <item>Moczybroda</item>
        <item>Na Jurze</item>
        <item>Namysłów</item>
        <item>Nepomucen</item>
        <item>Okocim</item>
        <item>Perła</item>
        <item>Primator</item>
        <item>Racibórz</item>
        <item>Raduga</item>
        <item>Recraft</item>
        <item>Somersby</item>
        <item>Staropramen</item>
        <item>Tyskie</item>
        <item>Witnica</item>
        <item>Wrężel</item>
        <item>Za Miastem</item>
        <item>Zatecky</item>
        <item>Żubr</item>
    </string-array>
    <string-array name="cocktails">
        <item>Black Russian</item>
        <item>B-52</item>
        <item>Cosmopolitan</item>
        <item>Cuba Libre</item>
        <item>Daiquiri</item>
        <item>Kamikaze</item>
        <item>Krwawa Mary</item>
        <item>Long Island</item>
        <item>Margarita</item>
        <item>Martini</item>
        <item>Mojito</item>
        <item>Pina Colada</item>
        <item>Sex on the beach</item>
        <item>Tequila Sunrise</item>
    </string-array>
    <string name="wiecej">więcej</string>
    <string-array name="beer_styles">
        <item>Lager</item>
        <item>Pilsner</item>
        <item>IPA</item>
        <item>APA</item>
        <item>Witbier</item>
        <item>Porter</item>
        <item>Stout</item>
        <item>Ale</item>
        <item>Wheat beer</item>
        <item>Dark beer</item>
        <item>Light beer</item>
    </string-array>
    <string-array name="beer_styles_unkown">
        <item>Unknown</item>
        <item>Lager</item>
        <item>Pilsner</item>
        <item>IPA</item>
        <item>APA</item>
        <item>Witbier</item>
        <item>Porter</item>
        <item>Scout</item>
        <item>Ale</item>
        <item>Wheat beer</item>
        <item>Dark beer</item>
        <item>Light beer</item>
    </string-array>
    <string-array name="pub_tags">
        <item>Whiskey</item>
        <item>Wino</item>
        <item>Shoty</item>
        <item>Piwa kraftowe</item>
        <item>Piwa koncernowe</item>
        <item>Gry planszowe</item>
        <item>Karaoke</item>
        <item>Muzyka na żywo</item>
        <item>Tanie piwo</item>
    </string-array>
    <string-array name="beer_styles_long_description">
    </string-array>
    <string-array name="beer_styles_short_description">
    </string-array>
    <string-array name="beer_styles_maltiness">
        <item>2/5</item>
        <item>2/5</item>
        <item>3/5</item>
        <item>3/5</item>
        <item>2/5</item>
        <item>4/5</item>
        <item>4/5</item>
        <item>3/5</item>
        <item>3/5</item>
        <item>4/5</item>
        <item>2/5</item>
    </string-array>
    <string-array name="beer_styles_hoppiness">
        <item>2/5</item>
        <item>4/5</item>
        <item>5/5</item>
        <item>4/5</item>
        <item>2/5</item>
        <item>2/5</item>
        <item>3/5</item>
        <item>3/5</item>
        <item>2/5</item>
        <item>2/5</item>
        <item>3/5</item>
    </string-array>
    <string-array name="beer_styles_alcohol_percentage">
        <item>4-5%</item>
        <item>4-5%</item>
        <item>5-7%</item>
        <item>4-6%</item>
        <item>4-5%</item>
        <item>4-6%</item>
        <item>5-12%</item>
        <item>4-7%</item>
        <item>4-6%</item>
        <item>5-7%</item>
        <item>4-5%</item>
    </string-array>
    <string name="short_des">Short description</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="loading">Loading…</string>
    <string name="page_title">%1$s</string>
    <string name="searcher_title">Searcher</string>
    <string name="sth_went_wrong">Something went wrong …\u0020</string>
    <string name="auth_error_message">Authentication Error</string>
    <string name="user_account_error_message">User Account Error</string>
    <string name="no_internet_connection_message">No Internet Connection</string>
    <string name="marked_as_favorite_message">Marked as Favorite</string>
    <string name="comment_added_message">Comment Added</string>
    <string name="no_navigation_message">No navigation</string>
    <string name="ic_settings_title">Settings</string>
    <string name="ic_expand_title">More</string>
    <string name="dictionary">Alcohol dictionary</string>
    <string name="edit">edit</string>
    <string name="list">List</string>
    <string name="favorite">Favourite</string>
    <string name="settings">Settings</string>
    <string name="your_nickname">Your nickname</string>
    <string name="sex">Sex</string>
    <string name="edit_content">Edit</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="delete_account">Delete account</string>
    <string name="yes">Yes</string>
    <string name="new_email">New email:</string>
    <string name="new_username">New username:</string>
    <string name="user_account">User\'s account</string>
    <string name="join_info">Join date</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="verify_email">Verify</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="log_out">Log Out</string>
    <string name="welcome_in_pubber">Welcome in Pubber!</string>
    <string name="first_time_info">We hope to help you find pubs that match your taste and to stay by your side as long as possible.</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="choose_language">Choose your language:</string>
    <string name="choose_theme">Choose app\'s theme:</string>
    <string name="theme">Phone\'s theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="polish">Polski</string>
    <string name="english">English</string>
    <string name="ukrainian">Український</string>
    <string name="example_button">Button example</string>
    <string name="text">Text</string>
    <string name="go_back">go back</string>
    <string name="rating">Rating</string>
    <string name="price">Price</string>
    <string name="beers_present">Beers:</string>
    <string name="drinks_present">Drinks:</string>
    <string name="available_alcohols">Available alcohols</string>
    <string name="origin">Origin</string>
    <string name="nickname">Nickname</string>
    <string name="content">Content</string>
    <string name="about_us">About us</string>
    <string name="type_here">Type here…</string>
    <string name="send">Send</string>
    <string name="send_message_adnotation">We are asking for writing everything that comes to your mind. From your overall app experience to what would you like to be added in the future. Thanks in advance for all messages.\n </string>
    <string name="confirm">Confirm</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="notifications_key">notification</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="localization_key">localization</string>
    <string name="enable_localization">Enable localization</string>
    <string name="language_key">language</string>
    <string name="theme_key">theme</string>
    <string name="information_category">Informations</string>
    <string name="about_us_key">about_us</string>
    <string name="about_us_summary">Informations about app and it\'s origin</string>
    <string name="send_feedback_key">feedback</string>
    <string name="send_feedback">Send feedback</string>
    <string name="send_feedback_summary">Report technical issues or suggest new features!</string>
    <string name="account_key">Account</string>
    <string name="account">Manage</string>
    <string name="account_log_out_key">logout</string>
</resources>