<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreferenceCompat
        app:key="@string/notifications_key"
        app:title="@string/enable_notifications"
        app:icon="@drawable/ic_notifications_on_surface"
        android:layout="@layout/preference_switch_button_layout"/>
    <SwitchPreferenceCompat
        app:key="@string/localization_key"
        app:title="@string/enable_localization"
        app:icon="@drawable/ic_location_on_surface"
        android:layout="@layout/preference_switch_button_layout"/>
    <com.overmighties.pubber.app.designsystem.CustomListPreference
        app:key="@string/language_key"
        android:title="@string/choose_language"
        app:useSimpleSummaryProvider="true"
        android:entries="@array/language_list"
        android:entryValues="@array/language_list"
        app:icon="@drawable/ic_language_on_surface"/>
    <com.overmighties.pubber.app.designsystem.CustomListPreference
        app:key="@string/theme_key"
        android:title="@string/theme"
        app:useSimpleSummaryProvider="true"
        android:entries="@array/theme_list_display"
        android:entryValues="@array/theme_list"
        app:icon="@drawable/ic_contrast"/>
    <PreferenceCategory
        app:key="informations"
        app:title="@string/information_category"
        android:layout="@layout/preference_category_layout">
        <Preference
            app:key="@string/about_us_key"
            app:title="@string/about_us"
            app:icon="@drawable/ic_info_on_surface"
            app:summary="@string/about_us_summary"
            android:layout="@layout/preference_text_layout"/>
        <Preference
            app:key="@string/send_feedback_key"
            app:icon="@drawable/ic_message"
            app:title="@string/send_feedback"
            app:summary="@string/send_feedback_summary"
            android:layout="@layout/preference_text_layout"/>
    </PreferenceCategory>
    <PreferenceCategory
        app:key="account_info"
        android:title="@string/account_key"
        android:layout="@layout/preference_category_layout">
        <Preference
            app:key="@string/account_key"
            app:title="@string/account"
            app:icon="@drawable/ic_account_on_surface"
            android:layout="@layout/preference_text_layout"/>
        <Preference
            app:key="@string/account_log_out_key"
            app:title="@string/log_out"
            app:icon="@drawable/ic_logout"
            android:layout="@layout/preference_log_out_layout" />
    </PreferenceCategory>
</PreferenceScreen>