<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailsCom_cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/constraint_layout_margin_down_dim"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/detailsCom_text_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/nickname"
        android:textColor="@color/on_surface"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detailsCom_text_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/origin"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/detailsCom_text_nickname"
        app:layout_constraintStart_toEndOf="@+id/detailsCom_text_nickname"
        app:layout_constraintTop_toTopOf="@+id/detailsCom_text_nickname" />

    <TextView
        android:id="@+id/detailsCom_text_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:textColor="@color/on_surface"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/detailsCom_text_nickname"
        app:layout_constraintTop_toBottomOf="@+id/detailsCom_text_nickname" />

    <TextView
        android:id="@+id/detailsCom_text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="@color/on_surface_variant"
        app:layout_constraintStart_toStartOf="@+id/detailsCom_text_rating"
        app:layout_constraintTop_toBottomOf="@+id/detailsCom_text_rating" />

    <TextView
        android:id="@+id/detailsCom_text_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/content"
        android:textColor="@color/on_surface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/detailsCom_text_price"
        app:layout_constraintTop_toBottomOf="@+id/detailsCom_text_price" />
</androidx.constraintlayout.widget.ConstraintLayout>