<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_theme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.firstopen.ThemeFragment">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/choose_theme"
        android:textColor="@color/on_surface"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TV_dark_f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/dark"
        android:textColor="@color/on_surface"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/TV_light_f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/light"
        android:textColor="@color/on_surface"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_dark_f" />

    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/radioButton_dark_f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/TV_dark_f"
        app:layout_constraintStart_toEndOf="@+id/TV_dark_f"
        app:layout_constraintTop_toTopOf="@+id/TV_dark_f" />

    <RadioButton
        android:id="@+id/radioButton_light_f"
        style="@style/Widget.App.RadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/TV_light_f"
        app:layout_constraintStart_toEndOf="@+id/TV_light_f"
        app:layout_constraintTop_toTopOf="@+id/TV_light_f" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/example_button"
        android:textColor="@color/on_surface"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/TV_light_f"
        app:layout_constraintTop_toBottomOf="@+id/TV_light_f" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:background="@drawable/button_shape_container"
        android:text="@string/text"
        android:textColor="@color/on_secondary_container"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <Button
        android:id="@+id/buttonNextEnd"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button_shape_square_container"
        android:text="@string/next"
        android:textColor="@color/on_secondary_container"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>