<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/language_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.firstopen.LanguageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/language_constraintLayout_top"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/language_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/choose_language"
            android:textColor="@color/on_surface"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/language_radioButton_polish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/polish"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:textColor="@color/on_surface"
        android:buttonTint="@color/on_surface_variant"
        app:useMaterialThemeColors="false"
        android:paddingStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language_constraintLayout_top" />

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/language_radioButton_english"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/english"
        android:textSize="16sp"
        android:textColor="@color/on_surface"
        android:buttonTint="@color/on_surface_variant"
        android:paddingStart="8dp"
        app:useMaterialThemeColors="false"
        app:layout_constraintStart_toStartOf="@+id/language_radioButton_polish"
        app:layout_constraintTop_toBottomOf="@+id/language_radioButton_polish" />

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/language_radioButton_ukrainian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ukrainian"
        android:textColor="@color/on_surface"
        android:buttonTint="@color/on_surface_variant"
        app:useMaterialThemeColors="false"
        android:textSize="16sp"
        android:paddingStart="8dp"
        app:layout_constraintStart_toStartOf="@+id/language_radioButton_english"
        app:layout_constraintTop_toBottomOf="@+id/language_radioButton_english" />

    <Button
        android:id="@+id/language_button_next"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button_shape_square_container"
        android:text="@string/next"
        android:textColor="@color/on_secondary_container"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/language_button_back"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button_shape_square_container"
        android:text="@string/back"
        android:textColor="@color/on_secondary_container"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>