<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsMess_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/settingsMess_inputLayout_mess"
        style="@style/CustomTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="15dp"
        android:hint="@string/type_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/settings_editText_mess"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|start"
            android:textColor="@color/on_surface" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/settingsMess_text_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/send_message_adnotation"
        android:textColor="@color/on_surface"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/settingsMess_inputLayout_mess"
        app:layout_constraintTop_toBottomOf="@+id/settingsMess_inputLayout_mess" />

    <Button
        android:id="@+id/settingsMess_button_send"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_shape_container"
        android:text="@string/send"
        android:textColor="@color/on_secondary_container"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsMess_text_info" />

</androidx.constraintlayout.widget.ConstraintLayout>